<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="WebViewLayout">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/logoImgView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/_24sdp"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/full_logo" />

            <com.drp.shared_ui.widget.xml.BankEditText
                android:id="@+id/nationalCodeEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/national_code_st"
                android:inputType="number"
                android:maxLength="10"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logoImgView" />

            <com.drp.shared_ui.widget.xml.PhoneNumberAutoComplete
                android:id="@+id/phoneNumberEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:elevation="@dimen/_10sdp"
                android:hint="@string/mobile_no_st"
                android:inputType="phone|number"
                android:maxLength="13"
                android:textSize="@dimen/ui_text_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nationalCodeEt" />

            <com.drp.shared_ui.widget.xml.DateInput
                android:id="@+id/birthDateEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:elevation="@dimen/_10sdp"
                android:hint="@string/birth_date_st"
                android:imeOptions="actionDone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phoneNumberEt" />

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/loginLoadingBtn"
                style="@style/button_blue_style"
                android:layout_marginTop="@dimen/_24sdp"
                android:text="@string/login_st"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/birthDateEt" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>